<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/inicio"
        android:title="@string/inicio" />

    <item
        android:id="@+id/suma"
        android:title="@string/suma"/>

    <item
        android:id="@+id/imagenes"
        android:enabled="true"
        android:title="@string/acciones_imagenes"
        android:visible="true">
        <menu>
            <group android:id="@+id/group_imagen">
                <item
                    android:id="@+id/galeria"
                    android:title="@string/galer_a" />

                <item
                    android:id="@+id/cambioImagen"
                    android:title="@string/cambio_imagen" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/texto"
        android:enabled="true"
        android:title="@string/acciones_texto"
        android:visible="true">
        <menu>
            <group android:id="@+id/group_texto">
                <item
                    android:id="@+id/colorearTexto"
                    android:title="@string/colorear_texto" />

                <item
                    android:id="@+id/alinearTexto"
                    android:title="@string/alinear_texto" />

                <item
                    android:id="@+id/tamanoTexto"
                    android:title="@string/tama_o_de_texto" />

                <item
                    android:id="@+id/propiedadesTexto"
                    android:title="@string/propiedades_de_texto" />
            </group>
        </menu>
    </item>

</menu>