<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!--IMPORTANTE en el id va el id del emento del nav al que queremos que nos lleve-->
    <item
        android:id="@+id/nav_inicioFragment"
        android:title="@string/inicio" />

    <item
        android:id="@+id/nav_sumaFragment"
        android:title="@string/suma" />

    <item
        android:id="@+id/nav_galeriaFragment"
        android:title="@string/galer_a" />

    <item
        android:id="@+id/nav_cambioImagenFragment"
        android:title="@string/cambio_imagen" />

    <item
        android:id="@+id/nav_colorTextoFragment"
        android:title="@string/colorear_texto" />

    <item
        android:id="@+id/nav_alinearTextoFragment"
        android:title="@string/alinear_texto" />

    <item
        android:id="@+id/nav_tamanoTextoFragment"
        android:title="@string/tama_o_de_texto" />

    <item
        android:id="@+id/nav_propiedadestextoFragment"
        android:title="@string/propiedades_de_texto" />

</menu>